compiler-frontend/parsing/tests/snapshots/parser__binder_parenthesized.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..108
      ModuleHeader@0..32
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..26
          UPPER@7..26 "BinderParenthesized"
        Annotation@26..27
          TEXT@26..27 " "
        WHERE@27..32 "where"
      LAYOUT_START@32..32 ""
      ModuleStatements@32..107
        ValueEquation@32..55
          Annotation@32..34
            TEXT@32..34 "\n\n"
          LOWER@34..47 "parenthesized"
          FunctionBinders@47..51
            BinderParenthesized@47..51
              Annotation@47..48
                TEXT@47..48 " "
              LEFT_PARENTHESIS@48..49 "("
              BinderVariable@49..50
                LOWER@49..50 "x"
              RIGHT_PARENTHESIS@50..51 ")"
          Unconditional@51..55
            Annotation@51..52
              TEXT@51..52 " "
            EQUAL@52..53 "="
            WhereExpression@53..55
              ExpressionInteger@53..55
                Annotation@53..54
                  TEXT@53..54 " "
                INTEGER@54..55 "0"
        LAYOUT_SEPARATOR@55..55 ""
        ValueEquation@55..81
          Annotation@55..56
            TEXT@55..56 "\n"
          LOWER@56..69 "parenthesized"
          FunctionBinders@69..77
            BinderParenthesized@69..77
              Annotation@69..70
                TEXT@69..70 " "
              LEFT_PARENTHESIS@70..71 "("
              BinderOperatorChain@71..76
                BinderVariable@71..72
                  LOWER@71..72 "x"
                BinderOperatorPair@72..76
                  TermOperator@72..74
                    Annotation@72..73
                      TEXT@72..73 " "
                    QualifiedName@73..74
                      OPERATOR@73..74 "+"
                  BinderVariable@74..76
                    Annotation@74..75
                      TEXT@74..75 " "
                    LOWER@75..76 "y"
              RIGHT_PARENTHESIS@76..77 ")"
          Unconditional@77..81
            Annotation@77..78
              TEXT@77..78 " "
            EQUAL@78..79 "="
            WhereExpression@79..81
              ExpressionInteger@79..81
                Annotation@79..80
                  TEXT@79..80 " "
                INTEGER@80..81 "0"
        LAYOUT_SEPARATOR@81..81 ""
        ValueEquation@81..107
          Annotation@81..82
            TEXT@81..82 "\n"
          LOWER@82..95 "parenthesized"
          FunctionBinders@95..103
            BinderParenthesized@95..103
              Annotation@95..96
                TEXT@95..96 " "
              LEFT_PARENTHESIS@96..97 "("
              BinderParenthesized@97..102
                LEFT_PARENTHESIS@97..98 "("
                BinderParenthesized@98..101
                  LEFT_PARENTHESIS@98..99 "("
                  BinderVariable@99..100
                    LOWER@99..100 "x"
                  RIGHT_PARENTHESIS@100..101 ")"
                RIGHT_PARENTHESIS@101..102 ")"
              RIGHT_PARENTHESIS@102..103 ")"
          Unconditional@103..107
            Annotation@103..104
              TEXT@103..104 " "
            EQUAL@104..105 "="
            WhereExpression@105..107
              ExpressionInteger@105..107
                Annotation@105..106
                  TEXT@105..106 " "
                INTEGER@106..107 "0"
      LAYOUT_END@107..107 ""
      Annotation@107..108
        TEXT@107..108 "\n"
      END_OF_FILE@108..108 ""
    ,
    [],
)
