compiler-frontend/parsing/tests/snapshots/parser__binder_record.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..128
      ModuleHeader@0..25
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..19
          UPPER@7..19 "BinderRecord"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      ModuleStatements@25..127
        ValueEquation@25..40
          Annotation@25..27
            TEXT@25..27 "\n\n"
          LOWER@27..33 "record"
          FunctionBinders@33..36
            BinderRecord@33..36
              Annotation@33..34
                TEXT@33..34 " "
              LEFT_CURLY@34..35 "{"
              RIGHT_CURLY@35..36 "}"
          Unconditional@36..40
            Annotation@36..37
              TEXT@36..37 " "
            EQUAL@37..38 "="
            WhereExpression@38..40
              ExpressionInteger@38..40
                Annotation@38..39
                  TEXT@38..39 " "
                INTEGER@39..40 "0"
        LAYOUT_SEPARATOR@40..40 ""
        ValueEquation@40..55
          Annotation@40..41
            TEXT@40..41 "\n"
          LOWER@41..47 "record"
          FunctionBinders@47..51
            BinderRecord@47..51
              Annotation@47..48
                TEXT@47..48 " "
              LEFT_CURLY@48..49 "{"
              RecordPun@49..50
                LabelName@49..50
                  TEXT@49..50 "x"
              RIGHT_CURLY@50..51 "}"
          Unconditional@51..55
            Annotation@51..52
              TEXT@51..52 " "
            EQUAL@52..53 "="
            WhereExpression@53..55
              ExpressionInteger@53..55
                Annotation@53..54
                  TEXT@53..54 " "
                INTEGER@54..55 "0"
        LAYOUT_SEPARATOR@55..55 ""
        ValueEquation@55..73
          Annotation@55..56
            TEXT@55..56 "\n"
          LOWER@56..62 "record"
          FunctionBinders@62..69
            BinderRecord@62..69
              Annotation@62..63
                TEXT@62..63 " "
              LEFT_CURLY@63..64 "{"
              RecordPun@64..65
                LabelName@64..65
                  TEXT@64..65 "x"
              COMMA@65..66 ","
              RecordPun@66..68
                LabelName@66..68
                  Annotation@66..67
                    TEXT@66..67 " "
                  TEXT@67..68 "y"
              RIGHT_CURLY@68..69 "}"
          Unconditional@69..73
            Annotation@69..70
              TEXT@69..70 " "
            EQUAL@70..71 "="
            WhereExpression@71..73
              ExpressionInteger@71..73
                Annotation@71..72
                  TEXT@71..72 " "
                INTEGER@72..73 "0"
        LAYOUT_SEPARATOR@73..73 ""
        ValueEquation@73..97
          Annotation@73..74
            TEXT@73..74 "\n"
          LOWER@74..80 "record"
          FunctionBinders@80..93
            BinderRecord@80..93
              Annotation@80..81
                TEXT@80..81 " "
              LEFT_CURLY@81..82 "{"
              RecordField@82..86
                LabelName@82..83
                  TEXT@82..83 "x"
                COLON@83..84 ":"
                BinderVariable@84..86
                  Annotation@84..85
                    TEXT@84..85 " "
                  LOWER@85..86 "y"
              COMMA@86..87 ","
              RecordField@87..92
                LabelName@87..89
                  Annotation@87..88
                    TEXT@87..88 " "
                  TEXT@88..89 "y"
                COLON@89..90 ":"
                BinderVariable@90..92
                  Annotation@90..91
                    TEXT@90..91 " "
                  LOWER@91..92 "x"
              RIGHT_CURLY@92..93 "}"
          Unconditional@93..97
            Annotation@93..94
              TEXT@93..94 " "
            EQUAL@94..95 "="
            WhereExpression@95..97
              ExpressionInteger@95..97
                Annotation@95..96
                  TEXT@95..96 " "
                INTEGER@96..97 "0"
        LAYOUT_SEPARATOR@97..97 ""
        ValueEquation@97..127
          Annotation@97..98
            TEXT@97..98 "\n"
          LOWER@98..104 "record"
          FunctionBinders@104..123
            BinderRecord@104..123
              Annotation@104..105
                TEXT@104..105 " "
              LEFT_CURLY@105..106 "{"
              RecordPun@106..107
                LabelName@106..107
                  TEXT@106..107 "a"
              COMMA@107..108 ","
              RecordField@108..113
                LabelName@108..110
                  Annotation@108..109
                    TEXT@108..109 " "
                  TEXT@109..110 "b"
                COLON@110..111 ":"
                BinderVariable@111..113
                  Annotation@111..112
                    TEXT@111..112 " "
                  LOWER@112..113 "c"
              COMMA@113..114 ","
              RecordPun@114..116
                LabelName@114..116
                  Annotation@114..115
                    TEXT@114..115 " "
                  TEXT@115..116 "d"
              COMMA@116..117 ","
              RecordField@117..122
                LabelName@117..119
                  Annotation@117..118
                    TEXT@117..118 " "
                  TEXT@118..119 "e"
                COLON@119..120 ":"
                BinderVariable@120..122
                  Annotation@120..121
                    TEXT@120..121 " "
                  LOWER@121..122 "f"
              RIGHT_CURLY@122..123 "}"
          Unconditional@123..127
            Annotation@123..124
              TEXT@123..124 " "
            EQUAL@124..125 "="
            WhereExpression@125..127
              ExpressionInteger@125..127
                Annotation@125..126
                  TEXT@125..126 " "
                INTEGER@126..127 "0"
      LAYOUT_END@127..127 ""
      Annotation@127..128
        TEXT@127..128 "\n"
      END_OF_FILE@128..128 ""
    ,
    [],
)
