compiler-frontend/parsing/tests/snapshots/parser__binder_string.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..69
      ModuleHeader@0..25
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..19
          UPPER@7..19 "BinderString"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      ModuleStatements@25..68
        ValueEquation@25..45
          Annotation@25..27
            TEXT@25..27 "\n\n"
          LOWER@27..33 "string"
          FunctionBinders@33..41
            BinderString@33..41
              Annotation@33..34
                TEXT@33..34 " "
              STRING@34..41 "\"hello\""
          Unconditional@41..45
            Annotation@41..42
              TEXT@41..42 " "
            EQUAL@42..43 "="
            WhereExpression@43..45
              ExpressionInteger@43..45
                Annotation@43..44
                  TEXT@43..44 " "
                INTEGER@44..45 "0"
        LAYOUT_SEPARATOR@45..45 ""
        ValueEquation@45..68
          Annotation@45..46
            TEXT@45..46 "\n"
          LOWER@46..52 "string"
          FunctionBinders@52..64
            BinderString@52..64
              Annotation@52..53
                TEXT@52..53 " "
              RAW_STRING@53..64 "\"\"\"hello\"\"\""
          Unconditional@64..68
            Annotation@64..65
              TEXT@64..65 " "
            EQUAL@65..66 "="
            WhereExpression@66..68
              ExpressionInteger@66..68
                Annotation@66..67
                  TEXT@66..67 " "
                INTEGER@67..68 "0"
      LAYOUT_END@68..68 ""
      Annotation@68..69
        TEXT@68..69 "\n"
      END_OF_FILE@69..69 ""
    ,
    [],
)
