compiler-frontend/parsing/tests/snapshots/parser__binder_variable.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..61
      ModuleHeader@0..27
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..21
          UPPER@7..21 "BinderVariable"
        Annotation@21..22
          TEXT@21..22 " "
        WHERE@22..27 "where"
      LAYOUT_START@27..27 ""
      ModuleStatements@27..60
        ValueEquation@27..43
          Annotation@27..29
            TEXT@27..29 "\n\n"
          LOWER@29..37 "identity"
          FunctionBinders@37..39
            BinderVariable@37..39
              Annotation@37..38
                TEXT@37..38 " "
              LOWER@38..39 "x"
          Unconditional@39..43
            Annotation@39..40
              TEXT@39..40 " "
            EQUAL@40..41 "="
            WhereExpression@41..43
              ExpressionInteger@41..43
                Annotation@41..42
                  TEXT@41..42 " "
                INTEGER@42..43 "0"
        LAYOUT_SEPARATOR@43..43 ""
        ValueEquation@43..60
          Annotation@43..44
            TEXT@43..44 "\n"
          LOWER@44..52 "identity"
          FunctionBinders@52..56
            BinderNamed@52..56
              Annotation@52..53
                TEXT@52..53 " "
              LOWER@53..54 "x"
              AT@54..55 "@"
              BinderVariable@55..56
                LOWER@55..56 "y"
          Unconditional@56..60
            Annotation@56..57
              TEXT@56..57 " "
            EQUAL@57..58 "="
            WhereExpression@58..60
              ExpressionInteger@58..60
                Annotation@58..59
                  TEXT@58..59 " "
                INTEGER@59..60 "0"
      LAYOUT_END@60..60 ""
      Annotation@60..61
        TEXT@60..61 "\n"
      END_OF_FILE@61..61 ""
    ,
    [],
)
